[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Vehicles/Vehicle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Crash.mp3" type="AudioStream" id=2]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0.2, 0.2, 0.2, 0.6 )

[sub_resource type="SphereMesh" id=3]
material = SubResource( 4 )
radius = 0.02
height = 0.04

[node name="Spatial" type="Spatial"]

[node name="VehicleBody" type="VehicleBody" parent="."]
script = ExtResource( 1 )

[node name="CrashSound" type="AudioStreamPlayer3D" parent="VehicleBody"]
stream = ExtResource( 2 )
unit_db = 80.0

[node name="NameLabel3D" type="Label3D" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false
billboard = 1

[node name="LeftMirrorPlaceHolder" type="Spatial" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 1, 0.4 )

[node name="RightMirrorPlaceHolder" type="Spatial" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 1, 0.4 )

[node name="LeftMirror" type="ViewportContainer" parent="VehicleBody"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -200.0
margin_right = 300.0
rect_scale = Vector2( -1, 1 )

[node name="Viewport" type="Viewport" parent="VehicleBody/LeftMirror"]
size = Vector2( 150, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="VehicleBody/LeftMirror/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 1, 0.4 )
far = 1000.0

[node name="RightMirror" type="ViewportContainer" parent="VehicleBody"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_right = 150.0
rect_scale = Vector2( -1, 1 )

[node name="Viewport" type="Viewport" parent="VehicleBody/RightMirror"]
size = Vector2( 150, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="VehicleBody/RightMirror/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 1, 0.4 )
far = 1000.0

[node name="Smoke" type="CPUParticles" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.4, -1.6 )
amount = 40
lifetime = 5.0
randomness = 1.0
local_coords = false
mesh = SubResource( 3 )
flag_rotate_y = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 9.8, 0 )
scale_amount = 5.0
scale_amount_random = 1.0

[node name="BackwardLight" type="SpotLight" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -1.5 )
light_color = Color( 1, 1, 0.588235, 1 )
light_energy = 0.0
spot_range = 20.0

[node name="RightFrontLight" type="SpotLight" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.7, 0.75, 1.5 )
light_energy = 0.0
spot_range = 20.0
spot_angle = 20.0

[node name="RightBackLight" type="SpotLight" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0.75, -1.5 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.0
spot_range = 10.0
spot_angle = 20.0

[node name="LeftBackLight" type="SpotLight" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0.75, -1.5 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.0
spot_range = 10.0
spot_angle = 20.0

[node name="LeftFrontLight" type="SpotLight" parent="VehicleBody"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.7, 0.75, 1.5 )
light_energy = 0.0
spot_range = 20.0
spot_angle = 20.0

[node name="WindscreenCamera" type="Camera" parent="VehicleBody"]
transform = Transform( -1, -1.51808e-08, 8.60946e-08, 0, 0.984808, 0.173648, -8.74228e-08, 0.173648, -0.984808, 0, 1.5, 0.5 )
far = 10000.0

[node name="CenterCamera" type="Camera" parent="VehicleBody"]
transform = Transform( -1, 2.62201e-08, -1.48702e-07, 0, 0.984808, 0.173648, 1.50996e-07, 0.173648, -0.984808, 0, 3, -3 )
far = 10000.0

[node name="LeftCamera" type="Camera" parent="VehicleBody"]
transform = Transform( -0.939693, -0.0593912, 0.336824, 0, 0.984808, 0.173648, -0.34202, 0.163176, -0.925417, 7, 4, -5 )
far = 10000.0

[node name="RightCamera" type="Camera" parent="VehicleBody"]
transform = Transform( -0.939693, 0.0593912, -0.336824, 0, 0.984808, 0.173648, 0.34202, 0.163176, -0.925417, -7, 4, -5 )
far = 10000.0

[node name="PreviewCamera" type="Camera" parent="VehicleBody"]
transform = Transform( 0.707107, -0.122788, 0.696364, 0, 0.984808, 0.173648, -0.707107, -0.122788, 0.696364, 2, 1, 2 )
far = 10000.0

[node name="LeftFrontWheel" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0.25, 1 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel" type="MeshInstance" parent="VehicleBody/LeftFrontWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
skeleton = NodePath("../../..")

[node name="LeftBackWheel" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.9, 0.25, -1 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel" type="MeshInstance" parent="VehicleBody/LeftBackWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
skeleton = NodePath("../../..")

[node name="RightFrontWheel" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9, 0.25, 1 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel" type="MeshInstance" parent="VehicleBody/RightFrontWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
skeleton = NodePath("../../..")

[node name="RightBackWheel" type="VehicleWheel" parent="VehicleBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.9, 0.25, -1 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel" type="MeshInstance" parent="VehicleBody/RightBackWheel"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
skeleton = NodePath("../../..")

[connection signal="body_entered" from="VehicleBody" to="VehicleBody" method="_crash"]
